--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="bg-gray-500 ">
-    <div id="container" class="w-screen h-screen flex flex-col gap-y-5 lg:flex-row md:pe-5 md:justify-center md:items-center md:gap-x-5">
+    <div id="container" class="w-screen h-screen flex flex-col-reverse gap-y-5 lg:flex-row md:pe-5 md:justify-center md:items-center md:gap-x-5">
         <div id="worker-list" class="w-full lg:w-[30%] xl:w-[25%] h-screen self-start overflow-y-scroll flex flex-col py-5 gap-y-5">
             <div class="flex justify-around items-center">
                 <input placeholder="Search..." class="w-[60%] h:[3vh] p-1 text-[.8rem] md:text-[1rem] md:p-2 md:h-[unset] xl:text-[1.2rem] xl:w-[70%] border border-slate-500 rounded-md xl:p-2" id="search" type="text">
@@ -28,7 +28,7 @@
             </div>
             <p id="no-worker-in-list" class="text-orange-400 text-center font-bold my-10 text-[1rem] xl:my-20 xl:text-[1.5rem] hidden">There's No Workers Yet</p>
         </div>
-        <div id="plan" class="w-[95%] mx-auto h-[30vh] 2xs:h-[40vh] 2xs:py-1 xs:h-[50vh] xs:py-2 xl:mx-0 sm:h-[90vh] md:w-[75%] lg:w-[70%] lg:h-[50vh] xl:w-[75%] xl:h-[85vh] bg-plan bg-contain bg-center bg-no-repeat xl:py-4 xl:px-2 gap-1 grid grid-cols-[repeat(22,1fr)] grid-rows-3">
+        <div id="plan" class="w-[95%] mx-auto mt-5 h-[30vh] 2xs:h-[40vh] 2xs:py-1 xs:h-[50vh] xs:py-2 xl:mx-0 sm:h-[90vh] md:w-[75%] lg:w-[70%] lg:h-[50vh] lg:mt-0 xl:w-[75%] xl:h-[85vh] bg-plan bg-contain bg-center bg-no-repeat xl:py-4 xl:px-2 gap-1 grid grid-cols-[repeat(22,1fr)] grid-rows-3">
             <div id="meeting-room" class="col-span-8 flex justify-center items-center">
                 <div class="meeting-room-btns rooms grid grid-cols-3 grid-row-2 gap-4 xl:gap-10">
                     
