--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gather</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="bg-gray-500 ">
     <div id="container" class="w-screen h-screen flex flex-col-reverse gap-y-5 lg:flex-row md:pe-5 md:justify-center md:items-center md:gap-x-5">
@@ -126,6 +126,6 @@
             </form>
         </div>
     </div>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
