--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gather</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body class="bg-gray-500 ">
+<body class="bg-gray-500 overflow-x-hidden">
     <div id="container" class="w-screen h-screen flex flex-col-reverse gap-y-5 lg:flex-row md:pe-5 md:justify-center md:items-center md:gap-x-5">
         <div id="worker-list" class="w-full lg:w-[30%] xl:w-[25%] h-screen self-start overflow-y-scroll flex flex-col py-5 gap-y-5">
             <div class="flex justify-around items-center">
