--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </select>
             </div>
             <h1 class="text-[1.2rem] md:text-[1.5rem] xl:text-[2rem] font-extrabold text-mist-white text-center">
-                Workers List
+                Workers List (<span id="worker-list-count">0</span>)
             </h1>
             <div class="w-10/12 mx-auto flex justify-around items-center">
                 <button id="add-worker-btn"
@@ -52,23 +52,63 @@
         </div>
         <div id="plan"
             class="w-[95%] mx-auto mt-5 h-[23vh] gap-1 grid grid-cols-45 grid-rows-18 2xs:h-[27vh] 2xs:py-1 xs:h-[31vh] xs:py-2 xl:mx-0 sm:w-[90%] sm:h-[50vh] md:w-[75%] md:h-[52vh] lg:w-[70%] lg:h-[55vh] lg:mt-0 xl:w-[75%] xl:h-[95vh] bg-plan bg-contain bg-center bg-no-repeat xl:py-4 xl:px-2">
-            <div id="meeting-room" class="col-start-1 col-end-[17] row-start-1 row-end-8 flex justify-center items-center">
-                <div class="meeting-room-btns rooms grid grid-cols-2 grid-row-3 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10"></div>
+            <div id="meeting-room"
+                class="relative col-start-1 col-end-[17] row-start-1 row-end-8 flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
+                <div
+                    class="meeting-room-btns rooms grid grid-cols-2 grid-row-3 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10">
+                </div>
             </div>
-            <div id="servers-room" class="col-start-[26] col-end-[36] row-start-1 row-end-7 flex justify-center items-center">
-                <div class="servers-room-btns rooms grid grid-cols-2 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10"></div>
+            <div id="servers-room"
+                class="relative col-start-[26] col-end-[36] row-start-1 row-end-7 flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
+                <div
+                    class="servers-room-btns rooms grid grid-cols-2 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10">
+                </div>
             </div>
-            <div id="security-room" class="col-start-[36] col-end-[46] row-start-1 row-end-7 flex justify-center items-center">
+            <div id="security-room"
+                class="relative col-start-[36] col-end-[46] row-start-1 row-end-7 flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
                 <div class="security-room-btns rooms"></div>
             </div>
-            <div id="reception-room" class="col-start-1 col-end-[17] row-start-8 row-end-[19] flex justify-center items-center">
-                <div class="reception-room-btns rooms grid grid-cols-2 grid-row-3 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10"></div>
+            <div id="reception-room"
+                class="relative col-start-1 col-end-[17] row-start-8 row-end-[19] flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
+                <div
+                    class="reception-room-btns rooms grid grid-cols-2 grid-row-3 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10">
+                </div>
             </div>
-            <div id="rest-room" class="col-start-[26] col-end-[37] row-start-11 row-end-[19] flex justify-center items-center">
-                <div class="rest-room-btns rooms grid grid-cols-1 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10"></div>
+            <div id="rest-room"
+                class="relative col-start-[26] col-end-[37] row-start-11 row-end-[19] flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
+                <div
+                    class="rest-room-btns rooms grid grid-cols-1 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10">
+                </div>
             </div>
-            <div id="archive-room" class="col-start-[37] col-end-[46] row-start-11 row-end-[19] flex justify-center items-center">
-                <div class="archive-room-btns rooms grid grid-cols-1 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10"></div>
+            <div id="archive-room"
+                class="relative col-start-[37] col-end-[46] row-start-11 row-end-[19] flex justify-center items-center">
+                <p
+                    class="room-count absolute text-straw-gold bg-luffy-red font-extrabold shadow-xl rounded-full text-[.5rem] top-1 right-1 px-1 xs:text-[.7rem] xs:px-[5px] sm:top-2 sm:right-2 md:text-[1rem] md:top-3 md:px-2 lg:text-[1.5rem] lg:px-[10px] xl:px-4 xl:top-5 xl:right-3 xl:text-[2rem]">
+                    0
+                </p>
+                <div
+                    class="archive-room-btns rooms grid grid-cols-1 grid-row-2 gap-1 2xs:gap-2 xs:gap-3 sm:gap-4 md:gap-6 lg:gap-8 xl:gap-10">
+                </div>
             </div>
         </div>
     </div>
@@ -77,7 +117,7 @@
         <div
             class="modal w-[90%] h-[80vh] sm:w-[80%] lg:w-[60%] xl:w-1/2 xl:h-[90vh] bg-pirate-gray rounded-lg relative">
             <div id="close-modal"
-                class="absolute top-1 right-1 rounded-[3px] text-[.6rem] w-[2vh] h-[2vh] sm:w-[3vh] sm:h-[3vh] sm:text-[.8rem] sm:rounded-[4px] md:w-[3.5vh] md:h-[3.5vh] md:text-[1rem] md:rounded-md xl:rounded-lg xl:w-[5vh] xl:h-[5vh] bg-red-400 text-mist-white flex justify-center items-center font-extrabold xl:text-[1.5rem] cursor-pointer transition-all duration-300 ease-in-out hover:scale-[1.05] hover:bg-red-600">
+                class="absolute top-1 right-1 rounded-[3px] text-[.6rem] w-[2vh] h-[2vh] sm:w-[3vh] sm:h-[3vh] sm:text-[.8rem] sm:rounded-[4px] md:w-[3.5vh] md:h-[3.5vh] md:text-[1rem] md:rounded-md xl:rounded-lg xl:w-[5vh] xl:h-[5vh] bg-luffy-red text-mist-white flex justify-center items-center font-extrabold xl:text-[1.5rem] cursor-pointer transition-all duration-300 ease-in-out hover:scale-[1.05] hover:bg-red-600">
                 x
             </div>
             <h1
@@ -145,7 +185,7 @@
                     <label for="enter_date"
                         class="text-[.8rem] md:text-[1rem] xl:text-[1.2rem] font-bold text-straw-gold">Enter
                         Date:</label>
-                    <input type="datetime-local" name="enter_date" id="enter_date"
+                    <input type="date" name="enter_date" id="enter_date"
                         class="text-[.8rem] py-1 px-2 md:text-[1rem] md:py-2 xl:text-[1.2rem] border border-slate-500 rounded-md xl:p-2" />
                     <p id="enter_date_err" class="text-luffy-red text-[.8rem] md:text-[1rem] xl:text-[1.2rem] hidden">
                     </p>
@@ -154,7 +194,7 @@
                     <label for="leave_date"
                         class="text-[.8rem] md:text-[1rem] xl:text-[1.2rem] font-bold text-straw-gold">Leave
                         Date:</label>
-                    <input type="datetime-local" name="leave_date" id="leave_date"
+                    <input type="date" name="leave_date" id="leave_date"
                         class="text-[.8rem] py-1 px-2 md:text-[1rem] md:py-2 xl:text-[1.2rem] border border-slate-500 rounded-md xl:p-2" />
                     <p id="leave_date_err" class="text-luffy-red text-[.8rem] md:text-[1rem] xl:text-[1.2rem] hidden">
                     </p>
