Add Meta Tags For Better SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gather</title>
+    <title>Straw Hats Gather</title>
+    <meta name="title" content="Straw Hats Gather" />
+    <meta name="description" content="Straw Hats Gather is a virtual workspace designed to manage workplace personnel on an interactive floor map, offering a smooth and responsive experience inspired by One Piece." />
+    <meta name="author" content="Badr Eddine Slaoui" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Straw Hats Gather" />
+    <meta property="og:description" content="A One Piece inspired virtual workspace for managing staff on an interactive floor map." />
+    <meta property="og:image" content="./images/logo.png" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" type="image/x-icon" href="./images/logo.png" />
     <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
