--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Straw Hats Gather" />
     <meta property="og:description" content="A One Piece inspired virtual workspace for managing staff on an interactive floor map." />
-    <meta property="og:image" content="./images/logo.png" />
+    <meta property="og:image" content="./images/logo.webp" />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/x-icon" href="./images/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./images/logo.webp" />
     <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
@@ -23,7 +23,7 @@
         <div
             class="w-full h-[70vh] bg-straw-gold border-e-4 border-pirate-gray 2xs:h-[65vh] xs:h-[62vh] sm:h-[50vh] lg:h-screen lg:w-[30%] xl:w-[25%] self-start flex flex-col pb-5 gap-y-5">
             <div class="w-full flex justify-center items-center h-[10vh] bg-[#021a2f]">
-                <img class="h-[10vh]" src="./images/logo.png" alt="Logo">
+                <img class="h-[10vh]" src="./images/logo.webp" alt="Logo" />
             </div>
             <div class="flex justify-around items-center">
                 <input placeholder="Search..."
@@ -176,7 +176,7 @@
                         class="text-[.8rem] py-1 px-2 md:text-[1rem] md:py-2 xl:text-[1.2rem] border border-slate-500 rounded-md xl:p-2" />
                 </div>
                 <div class="w-[90%] flex justify-center items-center">
-                    <img id="img-preview" src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Preview"
+                    <img id="img-preview" src="https://wallpapers.com/images/hd/straw-hat-pirates-0tmsc0p43nkng9rj.jpg" alt="Preview"
                         class="w-[20vh] h-[20vh] rounded-full hidden" />
                 </div>
                 <div class="w-[90%] flex flex-col gap-y-2">
